--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "path": "/api/cron/keep-alive",
             "schedule": "0 0 */5 * *"
+        },
+        {
+            "path": "/api/cron/reminders",
+            "schedule": "0 8 * * *"
         }
     ]
 }
