--- a/public/manifest-admin.json
+++ b/public/manifest-admin.json
@@ -11,7 +11,7 @@
     "lang": "he",
     "icons": [
         {
-            "src": "/icon-192.png",
+            "src": "/icona-512.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
